src/css/global.css
/* ... */
html {
    font-family: var(--font-body);
    font-size: 13px;
    line-height: 1.4;
    height: 100%;
}

img {
    max-width: 100%;
    height: auto;
}

svg {
    fill: currentColor;
}

a {
    outline: 0;
}

a:link,
a:visited {
    color: inherit;
    text-decoration: none;
}

@media (hover: hover) {
    a:hover {
        color: var(--color-primary);
    }
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin-block: 0;
    font-family: var(--font-heading);
    font-weight: unset;
    color: var(--color-tertiary);
}

ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

/* W3C spec */
* {
    scrollbar-width: thin;
    scrollbar-color: var(--color-outline) var(--color-outline-variant);
}

/* Chrome, Edge, and Safari */
::-webkit-scrollbar {
    width: 8px;
    height: 8px;
}

::-webkit-scrollbar-track {
    background: var(--color-outline-variant);
}

::-webkit-scrollbar-thumb {
    background-color: var(--color-outline);
}

::selection {
    background: var(--color-primary);
    color: var(--color-background);
}

/*
 * Loading overlay
 */
#loading-overlay {
    background-color: var(--color-background);
    position: fixed;
    height: 100vh;
    width: 100%;
    display: flex;
    z-index: 10000;
    transition: opacity 0.3s ease-out;
    justify-content: center;
    align-items: center;
}

#loading-overlay.hiding {
    opacity: 0;
    pointer-events: none;
}

#loading-overlay.hidden {
    display: none;
    pointer-events: none;
}

/* --------------------------
   Form / inputs
   -------------------------- */

sl-select small {
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 0.03em;
    font-size: 90%;
}

/* --------------------------
   Buttons / badges / tooltips
   -------------------------- */

::-moz-focus-inner {
    outline: 0;
}

.current-icon {
    display: inline-block;
    flex-shrink: 0;
    margin-inline-end: var(--spacing-sm);
    line-height: 1;
    vertical-align: middle;
}

/*
Variants
*/
sl-button::part(base) {
    background-color: var(--color-btn-default-bg);
    border-color: var(--color-btn-default-border);
    color: var(--color-btn-default-text);
    position: relative;
    overflow: hidden;
}

@supports (mix-blend-mode: multiply) {
    sl-button:not([variant="text"])::part(base)::after {
        content: "";
        position: absolute;
        inset: 0;
        background-image: linear-gradient(
            to bottom,
            transparent 30%,
            currentColor 100%
        );
        z-index: 1;
        pointer-events: none;
        mix-blend-mode: multiply;
        opacity: 0.1;
    }
}

sl-button::part(base):not(:disabled):hover {
    background-color: var(--color-btn-default-bg-hover);
    border-color: var(--color-btn-default-border-hover);
    color: var(--color-btn-default-text-hover);
}

sl-button[variant="text"]::part(base) {
    background-color: transparent;
    border-color: transparent;
}

sl-button[variant="text"]::part(base):not(:disabled):hover {
    background-color: transparent;
    border-color: transparent;
}

sl-button[variant="neutral"]::part(base) {
    background-color: var(--color-btn-neutral-bg);
    border-color: var(--color-btn-neutral-border);
    color: var(--color-btn-neutral-text);
}

sl-card sl-button[variant="neutral"]::part(base) {
    background-color: transparent;
}

sl-button[variant="neutral"]::part(base):not(:disabled):hover {
    background-color: var(--color-btn-neutral-bg-hover);
    border-color: var(--color-btn-neutral-border-hover);
    color: var(--color-btn-neutral-text-hover);
}

sl-button[variant="primary"]::part(base) {
    background-color: var(--color-btn-primary-bg);
    border-color: var(--color-btn-primary-border);
    color: var(--color-btn-primary-text);
}

sl-button[variant="primary"]::part(base):not(:disabled):hover {
    background-color: var(--color-btn-primary-bg-hover);
    border-color: var(--color-btn-primary-border-hover);
    color: var(--color-btn-primary-text-hover);
}

sl-button[variant="primary-alt"]::part(base) {
    background-color: var(--color-btn-primary-alt-bg);
    border-color: var(--color-btn-primary-alt-border);
    color: var(--color-btn-primary-alt-text);
}

sl-button[variant="primary-alt"]::part(base):not(:disabled):hover {
    background-color: var(--color-btn-primary-alt-bg-hover);
    border-color: var(--color-btn-primary-alt-border-hover);
    color: var(--color-btn-primary-alt-text-hover);
}

sl-button[variant="success"]::part(base) {
    background-color: var(--color-btn-success-bg);
    border-color: var(--color-btn-success-border);
    color: var(--color-btn-success-text);
}

sl-button[variant="success"]::part(base):not(:disabled):hover {
    background-color: var(--color-btn-success-bg-hover);
    border-color: var(--color-btn-success-border-hover);
    color: var(--color-btn-success-text-hover);
}

sl-button[variant="warning"]::part(base) {
    background-color: var(--color-btn-warning-bg);
    border-color: var(--color-btn-warning-border);
    color: var(--color-btn-warning-text);
}

sl-button[variant="warning"]::part(base):not(:disabled):hover {
    background-color: var(--color-btn-warning-bg-hover);
    border-color: var(--color-btn-warning-border-hover);
    color: var(--color-btn-warning-text-hover);
}

sl-button[variant="danger"]::part(base) {
    background-color: var(--color-btn-danger-bg);
    border-color: var(--color-btn-danger-border);
    color: var(--color-btn-danger-text);
}

sl-button[variant="danger"]::part(base):not(:disabled):hover {
    background-color: var(--color-btn-danger-bg-hover);
    border-color: var(--color-btn-danger-border-hover);
    color: var(--color-btn-danger-text-hover);
}

sl-button::part(base):not(:disabled):active {
    opacity: 0.8;
}

/*
Sizes
*/
sl-button::part(base) {
    font-size: 13px;
}

sl-button[size="small"]::part(base) {
    font-size: 11px;
}

sl-button[size="large"]::part(base) {
    font-size: 14px;
}
/* ... */

